fix(columns): gray gradient on ios

--- a/express/blocks/columns/columns.css
+++ b/express/blocks/columns/columns.css
@@ -545,7 +545,7 @@ body.no-brand-header main .columns.columns-marquee:not(.center) .brand.icon {
     width: 100%;
     padding-bottom: 20px;
     z-index: 2;
-    background: linear-gradient(180deg, transparent 0%, var(--color-white) 100%);
+    background: linear-gradient(180deg, var(--color-white) 0%, var(--color-white) 100%);
     transform: translateY(101%);
     transition: transform 1s;
     pointer-events: none;
